# sleepsync

./: .gitignore  .watchmanconfig  README.md  package-lock.json  ss-components.jsx  vercel.json
Melatonin/: .env.example  .gitignore  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
Server/: arduino.cpp
backend/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_feature_set_source.py
backend/app/: auth.py  config.py  deps.py  main.py  services.py  services_google_health.py
backend/app/routes/: account.py  dev.py  features.py  google_health.py  nights.py  plan.py
backend/domain/: debrief.py
backend/fixtures/mock_sleep_week/: night_0.json  night_1.json  night_2.json  night_3.json  night_4.json  night_5.json  night_6.json
backend/integrations/: google_health.py  google_health_parse.py
backend/ml/: features.py  mock_sleep_bank.py  optimizer.py  plan_inputs.py  risk_model.py  sleep_sufficiency.py  time_window.py  train_risk_model.py
backend/models/: schemas.py
backend/security/: token_cipher.py
backend/storage/: __init__.py  app_db.py  db.py  migrate.py  oauth.py  orm_models.py  repositories.py  sqlite_db.py
backend/tests/: conftest.py  gh_test_helpers.py  plan_test_helpers.py  synthetic_google_health.py  test_account_migrate.py  test_api_shapes.py  test_auth.py  test_debrief.py  test_dev_purge.py  test_google_health.py  test_mock_sleep_bank.py  test_optimizer_constraints.py  test_plan_night_reuse.py  test_plan_personalization.py  test_production_guards.py  test_risk_shapes.py  test_session_loop.py  test_sleep_sufficiency.py  test_token_cipher.py
backend/tests/fixtures/: mock_features.json
docs/: BLE_PATCH.md  GOOGLE_HEALTH.md  RUNNING.md
firmware/: patch_ble.ino  patch_controller.ino
mobile/: .env.example  (+7 more)
(+176 files in other folders)
