[project]
name = "sleepsync-backend"
version = "0.1.0"
description = "SleepSync personalization backend — wake-risk classifier + constrained release optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    # Google Health API live OAuth + REST pull (lazy-imported; sandbox path needs no network).
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ml*", "models*", "storage*", "integrations*", "security*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
