[project]
name = "sleepsync-backend"
version = "0.1.0"
description = "SleepSync personalization backend — wake-risk classifier + constrained release optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "cryptography>=43.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "domain*", "ml*", "models*", "storage*", "integrations*", "security*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
